fixing logo overlapping hamburger menu @ mobile viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@
     object-fit: center;
 }
 
+#naics_code_container{
+    padding-top: 3rem;
+}
+
+#acorn_logo{
+    width: 100%;
+    height: 50px;
+}
 /* custom colors for acorn */
 .bg-light-brown{
     background-color: #FAF5F0;
@@ -54,4 +62,11 @@
     display: flex;
     align-items: center;
     text-align: center;
+  }
+
+  @media screen and (max-width: 576px) {
+        #acorn_logo{
+            width: 180px;
+            height: 100%;
+        }
   }
